@@ -27,12 +27,12 @@ Each row has 6 elements with the C-style format "%13.6g".
 
 @BeginOperator_outputf
 @Title     = Formatted output
-@Parameter = format nelem
+@Parameter = format [nelem]
 
 @BeginDescription
 Prints all values to standard output.
 The format and number of elements for each row have to be specified by the parameters
-@var{format} and @var{nelem}.
+@var{format} and @var{nelem}. The default for @var{nelem} is 1.
 @EndDescription
 @EndOperator
 
@@ -70,7 +70,7 @@ Each field with a header of 4 integers (EXTRA likely).
 @Item = format
 STRING  C-style format for one element (e.g. \%13.6g)
 @Item = nelem
-INTEGER Number of elements for each row (nelem max = gridsize)
+INTEGER Number of elements for each row (default: nelem = 1)
 @EndParameter
 
 
